--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -5,7 +5,7 @@
     <input type="text" id="item_name" name="item[name]">
 
     <label>Item Price $</label>
-    <input type="text" id="item_name" name="item[price]">
+    <input type="number" id="item_name" name="item[price]">
 
     <inout type="submit" value="Create">
 </form>
