--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,7 +2,7 @@
 
 <form action="/login" method="post">
     <label>Email</label>
-    <input type="email" id="email" name="email" value="johnny@appleseed.com">
+    <input type="email" id="email" name="email" placeholder="johnny@appleseed.com">
     <br><br>
     <label>Password</label>
     <input type="password" id="password" name="password">
