--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -2,13 +2,13 @@
 
 <form action="/signup" method="post">
     <label>Name</label>
-    <input type="text" id="name" name="name" value="Johnny Appleseed">
+    <input type="text" id="name" name="name" placeholder="Johnny Appleseed">
     <br><br>
     <label>Email</labeL>
-    <input type="email" id="email" name="email" value="johnny@appleseed.com">
+    <input type="email" id="email" name="email" placeholder="johnny@appleseed.com">
     <br><br>
     <label>Password</label>
     <input type="password" id="password" name="password">
-
+    <br>
     <input type="submit" value="Register">
 </form>
