--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -7,5 +7,5 @@
     <label>Item Price $</label>
     <input type="number" id="item_name" name="item[price]">
 
-    <inout type="submit" value="Create">
+    <input type="submit" value="Create">
 </form>
