--- a/app/views/shopping_list/index.erb
+++ b/app/views/shopping_list/index.erb
@@ -20,4 +20,5 @@
 <br><br>
 
 <a href="/shopping_lists/new"><button>Create a New Shopping List</button></a><br><br>
+<a href="/items/new"><button>Create More Items</button></a><br><br>
 <a href="/logout"><button>Logout</button></a>
