added flash messages to item controller routes

--- a/app/views/shopping_list/new.erb
+++ b/app/views/shopping_list/new.erb
@@ -27,4 +27,4 @@
 </form>
 
 <h3> Need to add another Item to the database, before making your list? </h3>
-<a href="items/new"><button>Click Here!</button></a>
+<a href="/items/new"><button>Click Here!</button></a>
