--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,3 +1,9 @@
+<% if flash.has?(:missing_data) %>
+    <%= flash[:missing_data] %>
+<% elsif flash.has?(:existing_user) %>
+    <%= flash[:existing_user] %>
+<% end %>
+
 <h1> Signup! </h1>
 
 <form action="/signup" method="post">
